<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AR Music Kit</string>
    <string name="none"></string>

    <string name="inst_title_guitar">Playing Guitar</string>
    <string name="inst_title_piano">Playing Piano</string>
    <string name="inst_title_mb">Playing Music Box</string>
    <string name="inst_title_trace">Tracing Markers</string>
    <string name="inst_title_about">About</string>

    <string name="inst_guitar_0">Cut a guitar out of cardboard</string>
    <string name="inst_guitar_1">Place sticky notes on guitar. Make sure to include guitar icon</string>
    <string name="inst_guitar_2">Position phone so camera sees you holding guitar</string>
    <string name="inst_guitar_3">Move hand over guitar icon to play sound</string>
    <string name="inst_piano_0">Place sticky notes on a flat surface</string>
    <string name="inst_piano_1">Hold phone over sticky notes. Use hand to cover sticky notes to play sound</string>
    <string name="inst_mb_0">Place sticky notes on a flat surface</string>
    <string name="inst_mb_1">Hold phone over sticky notes</string>
    <string name="inst_mb_2">Move phone across sticky notes to play sound</string>

    <string name="menu_subtitle">Make music using sticky notes and your phone\'s camera</string>


    <string name="inst_trace_0">Place sticky note over the phone\'s screen. \nIncrease brightness for easier tracing</string>
    <string name="inst_trace_1">Carefully trace the outline of marker</string>

    <string name="To_get_the_markers">To get the markers, you can:</string>
    <string name="Trace_codes">Trace codes onto sticky notes</string>
    <string name="Open_in_chrome">Save a PDF to your device to print</string>
    <string name="Email_a_PDF">Email a PDF to yourself to print</string>

    <string name="about_text">This application is used by AR TOOL KIT.\nAR TOOL KIT is provided by GPLv3 and LGPLv3.</string>
    <string name="about_suzuki">www.yurisuzuki.com</string>
    <string name="about_google">Made with some friends at Google</string>


</resources>
